chapter_1/answers/exer_1.1/first
bash-3.2$ python first.py
  File "first.py", line 2
    
                      ^
SyntaxError: invalid syntax
bash-3.2$ 
